--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "mocha --require test/setup.js --watch",
-    "dev": "nodemon src/server.js",
-    "start": "nodemon --ignore './output/' src/server.js",
+    "dev": "nodemon --ignore './output/' src/server.js",
+    "start": "nodemon src/server.js",
     "predeploy": "npm audit",
     "deploy": "git push heroku master",
     "format": "prettier --write ."
