--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "yamma-proxy",
   "version": "1.0.0",
   "description": "Proxy server for Yamma",
-  "main": "server.js",
+  "main": "./src/server.js",
   "scripts": {
-    "test": "mocha --require test/setup.js --watch",
     "dev": "nodemon --ignore './output/' src/server.js",
     "devFix": "NODE_ENV=dev_test nodemon --ignore './output/' src/server.js",
-    "start": "nodemon src/server.js",
+    "commandline": "START_UP_MODE=commandline nodemon src/server.js",
+    "start": "START_UP_MODE=wakeup nodemon src/server.js",
     "predeploy": "npm audit",
     "deploy": "git push heroku master",
     "format": "prettier --write ."
@@ -21,7 +21,6 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "helmet": "^4.0.0",
-    "http-proxy-middleware": "^1.0.6",
     "isomorphic-fetch": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.2",
